# langgraph-news-portal

./: .gitignore  COSTAR_IMPLEMENTATION.md  config.yaml  mkdocs.yml  pyproject.toml  test_keyword_extractor_mcp.py  test_mcp_integration.py
docs/: index.md
src/news_portal/: __init__.py  agents.py  config.py  generate_structure.py  graph.py  main.py  mcp_client_service.py  tools.py
src/news_portal/mcp/: FASTMCP_GUIDE.md  README.md  fastmcp_server.py  mcp_tools_base.py  mcp_tools_cover_image_generator.py  mcp_tools_glossary_builder.py
src/news_portal/mcp/tests/: fastmcp_client.py  test_glossary_builder.py  test_keyword_extractor.py  test_knowledge_graph_builder.py  test_utils.py  view_generated_images.py
src/news_portal/mcp_tools/: FASTMCP_GUIDE.md  IMAGE_GENERATION_OPTIONS.md  README.md  TESTING_GUIDE.md  __init__.py  build_knowledge_graph.py  fastmcp_server.py  knowledge_graph_builder.py  mcp_tools_keyword_extractor.py  mcp_tools_knowledge_graph.py  requirements_mcp.txt  view_knowledge_graph.py
src/news_portal/mcp_tools/knowledge_graphs/: cancer_health_care.json
src/news_portal/mcp_tools/tests/: __init__.py  fastmcp_client.py  test_glossary_builder.py  test_keyword_extractor.py  test_knowledge_graph_builder.py  view_generated_images.py
tests/: README.md  __init__.py  test_featured_articles.py  test_fresh_news.py  test_performance.py  test_summary_length.py
